--- a/src/Components/HomeArea/CreateTwitt/CreateTwitt.css
+++ b/src/Components/HomeArea/CreateTwitt/CreateTwitt.css
@@ -1,3 +1,14 @@
 .CreateTwitt {
-	
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.CreateTwitt .bottom-area{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
 }
