fix: margin create area

--- a/src/Components/HomeArea/CreateTwitt/CreateTwitt.css
+++ b/src/Components/HomeArea/CreateTwitt/CreateTwitt.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
+    width: fit-content;
+    margin: auto;
 }
 
 .CreateTwitt .bottom-area{
